--- a/index.html
+++ b/index.html
@@ -1,73 +1,3 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-<meta charset="UTF-8">
-<title>Decisione Operativa – Farmacie Medigas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f2f4f7; margin: 0; padding: 0; }
-    header { background: #1e4e79; color: white; padding: 24px; text-align: center; font-size: 24px; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
-    .container { max-width: 900px; margin: 30px auto; padding: 0 20px; }
-    .section { background: white; padding: 22px; border-radius: 14px; margin-bottom: 25px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); }
-    .section h2 { margin-top: 0; color: #1e4e79; font-size: 20px; font-weight: 600; border-left: 6px solid #1e4e79; padding-left: 10px; }
-    label { font-weight: 600; display: block; margin-top: 14px; font-size: 15px; }
-    select, input { width: 100%; padding: 12px; margin-top: 6px; border-radius: 8px; border: 1px solid #b3b3b3; background: #fafafa; font-size: 15px; }
-    button { width: 100%; padding: 15px; margin-top: 25px; background: #1e4e79; color: white; border: none; font-size: 18px; border-radius: 10px; cursor: pointer; font-weight: 600; box-shadow: 0 3px 6px rgba(0,0,0,0.2); }
-    .output { background: #ffffff; padding: 25px; margin-top: 15px; border-left: 6px solid #1e4e79; border-radius: 12px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); font-size: 16px; line-height: 1.6; }
-
-    /* Colonne Resto d’Italia */
-    .col-container { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 10px; }
-    .col { flex: 1; min-width: 320px; background: #ffffff; padding: 18px; border-radius: 12px;
-           border-left: 5px solid #1e4e79; box-shadow: 0 3px 8px rgba(0,0,0,0.10); }
-    .col h3 { margin: 0 0 10px 0; font-size: 18px; color: #1e4e79; }
-</style>
-</head>
-
-<body>
-
-<header>Decisione Operativa – Farmacie Medigas</header>
-
-<div class="container">
-
-<div class="section">
-    <h2>Input</h2>
-
-    <label>Area farmacia</label>
-    <select id="area" onchange="gestisciSezione(); popolaSottozone();">
-        <option value="">— Seleziona —</option>
-        <option value="brescia">Brescia e provincia</option>
-        <option value="torino">Comuni Torino</option>
-        <option value="emilia">Emilia Romagna</option>
-        <option value="sardegna">Sud Sardegna</option>
-        <option value="resto">Resto d'Italia</option>
-    </select>
-
-    <div id="container-inputs">
-
-        <label>Sottozona</label>
-        <select id="zona">
-            <option value="">— Seleziona l'area prima —</option>
-        </select>
-
-        <label>Giorno richiesto dalla farmacia</label>
-        <input type="date" id="giornoRichiesto">
-
-        <label>Data e ora inserimento su Portale / Infomed</label>
-        <input type="datetime-local" id="inserimento">
-
-        <button onclick="calcola()">Genera Decisione Operativa</button>
-
-    </div>
-</div>
-
-<div class="section">
-    <h2>Risultato</h2>
-    <div id="result" class="output">Compila i campi per generare la decisione operativa.</div>
-</div>
-
-</div>
-
 <script>
 /* ==========================================================
    DINAMICA MOSTRA/NASCONDI INPUT PER RESTO D’ITALIA
@@ -174,10 +104,8 @@ function mostraProceduraResto() {
 }
 
 /* ==========================================================
-   (TUTTA LA PARTE SOTTO: SOTTOZONE, CALCOLI, PIANI)
-   È IDENTICA ALLA VERSIONE CHE GIÀ FUNZIONAVA
+   SOTTOZONE + COSTI
 ========================================================== */
-
 const sottozoneByArea = {
     brescia: ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia","Vallecamonica","Lago di Garda","Valtrompia"],
     emilia: ["Cesena","Forlì","Ravenna","Faenza","Lugo"]
@@ -206,10 +134,6 @@ function popolaSottozone() {
     sottozoneByArea[area].forEach(z => zona.innerHTML += `<option>${z}</option>`);
 }
 
-/* ==========================================================
-   CALCOLI (identici alla tua versione stabile)
-========================================================== */
-
 const costi = {
     brescia: "25 €",
     emilia: "50 €",
@@ -218,6 +142,9 @@ const costi = {
     resto: "0 €"
 };
 
+/* ==========================================================
+   UTILITY DATE
+========================================================== */
 function isWorkingDay(d){ const wd=d.getDay(); return wd>=1&&wd<=5; }
 function addDays(d,n){return new Date(d.getTime()+n*86400000);}
 function addWorkingDays(start,n){
@@ -229,6 +156,9 @@ function formatDate(d){
     return `${String(d.getDate()).padStart(2,"0")}/${String(d.getMonth()+1).padStart(2,"0")}/${d.getFullYear()}`;
 }
 
+/* ==========================================================
+   PIANI CONSEGNE
+========================================================== */
 function isInPiano(area,zona,day){
     const map={
         brescia:{
@@ -251,30 +181,51 @@ function isInPiano(area,zona,day){
     return (map[area]?.[day]||[]).includes(zona);
 }
 
-function computeGuaranteedDate(area,zona,dtIns){
-    const names=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
-    let base=new Date(dtIns.getFullYear(),dtIns.getMonth(),dtIns.getDate());
-    const weekday=base.getDay();
+/* ==========================================================
+   NUOVO CALCOLO GIORNO GARANTITO
+   (Tiene conto di cut-off + giorno richiesto)
+========================================================== */
+function computeGuaranteedDate(area, zona, dtIns, reqDate){
+    const giorni=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
+
+    // Giorno di inserimento (solo parte data)
+    let base = new Date(dtIns.getFullYear(), dtIns.getMonth(), dtIns.getDate());
+    const weekday = base.getDay();
 
     let offset;
-    if(weekday===6||weekday===0){ base=weekday===6?addDays(base,2):addDays(base,1); offset=1 }
-    else{
-        const h=dtIns.getHours(), m=dtIns.getMinutes();
-        const entro=(h<13)||(h===13 && m===0);
-        offset=entro?1:2;
+
+    // Gestione weekend + cut-off
+    if (weekday === 6 || weekday === 0) {
+        // Sabato o domenica → si parte dal lunedì successivo
+        base = (weekday === 6) ? addDays(base, 2) : addDays(base, 1);
+        offset = 1;
+    } else {
+        const h = dtIns.getHours(), m = dtIns.getMinutes();
+        const entroCutOff = (h < 13) || (h === 13 && m === 0);
+        offset = entroCutOff ? 1 : 2;
     }
 
-    let dt=addWorkingDays(base,offset);
-    while(true){
-        if(isWorkingDay(dt)&&isInPiano(area,zona,names[dt.getDay()])) break;
-        dt=addWorkingDays(dt,1);
+    // Primo giorno utile teorico (da cut-off)
+    const primoDaCutoff = addWorkingDays(base, offset);
+
+    // Non possiamo garantire prima del giorno richiesto
+    let d = new Date(Math.max(primoDaCutoff.getTime(), reqDate.getTime()));
+
+    // Cerchiamo il primo giorno in piano >= max(cutoff, richiesto)
+    while (true) {
+        if (isWorkingDay(d) && isInPiano(area, zona, giorni[d.getDay()])) break;
+        d = addWorkingDays(d, 1);
     }
-    return dt;
+
+    return d;
 }
 
+/* ==========================================================
+   FUNZIONE PRINCIPALE (AREE CON CALCOLO)
+========================================================== */
 function calcola(){
     const area=document.getElementById("area").value;
-    if(area==="resto") return; // già gestito prima
+    if(area==="resto") return; // già gestito da mostraProceduraResto
 
     const zona=document.getElementById("zona").value;
     const dRich=document.getElementById("giornoRichiesto").value;
@@ -288,35 +239,41 @@ function calcola(){
     const dtI=new Date(dIns);
     const giorni=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
     const giornoRich=giorni[dtR.getDay()];
+    const reqDate = new Date(dtR.getFullYear(), dtR.getMonth(), dtR.getDate());
 
     let zonaEff=zona;
     if(area==="torino") zonaEff="Comuni di Torino";
     if(area==="sardegna") zonaEff="Sud Sardegna";
 
-    const inP=isInPiano(area,zonaEff,giornoRich);
-    const dtG=computeGuaranteedDate(area,zonaEff,dtI);
-    const giornoG=giorni[dtG.getDay()];
+    const inPianoRichiesto = isInPiano(area,zonaEff,giornoRich);
 
-    const req=new Date(dtR.setHours(0,0,0,0));
-    const gar=new Date(dtG.setHours(0,0,0,0));
+    // Nuovo calcolo: giorno garantito tenendo conto anche del giorno richiesto
+    const dtGarantito = computeGuaranteedDate(area, zonaEff, dtI, reqDate);
+    const giornoGarantito = giorni[dtGarantito.getDay()];
+    const garDate = new Date(dtGarantito.getFullYear(), dtGarantito.getMonth(), dtGarantito.getDate());
 
-    let supplemento="NO", motivo="La richiesta rispetta il piano.";
-    if(!inP){ supplemento="SI"; motivo="Giorno fuori piano."; }
-    else if(req<gar){ supplemento="SI"; motivo="Richiesta precedente al giorno garantito."; }
+    let supplemento="NO";
+    let motivo="Richiesta in piano e compatibile con cut-off.";
+
+    if (reqDate.getTime() !== garDate.getTime()) {
+        supplemento = "SI";
+        if (reqDate < garDate) {
+            motivo = "Richiesta precedente al primo giorno utile (cut-off + piano).";
+        } else {
+            motivo = "Giorno richiesto fuori piano: consegna possibile con supplemento.";
+        }
+    }
 
     out.innerHTML=`
 <b>Area:</b> ${area.toUpperCase()}<br>
 <b>Zona:</b> ${zonaEff}<br><br>
 
-<b>Giorno richiesto:</b> ${giornoRich.toUpperCase()} (${formatDate(req)})<br>
-<b>Giorno garantito:</b> ${giornoG.toUpperCase()} (${formatDate(gar)})<br><br>
+<b>Giorno richiesto:</b> ${giornoRich.toUpperCase()} (${formatDate(reqDate)})<br>
+<b>Giorno garantito (cut-off + piano):</b> ${giornoGarantito.toUpperCase()} (${formatDate(garDate)})<br><br>
 
-<b>Piano consegne:</b> ${inP?"✔ In piano":"⛔ Fuori piano"}<br>
+<b>Piano consegne (giorno richiesto):</b> ${inPianoRichiesto ? "✔ In piano" : "⛔ Fuori piano"}<br>
 <b>Supplemento:</b> ${supplemento} (importo: ${costi[area]})<br>
 <b>Motivo:</b> ${motivo}
 `;
 }
 </script>
-
-</body>
-</html>
