--- a/index.html
+++ b/index.html
@@ -1,6 +1,77 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+<meta charset="UTF-8">
+<title>Decisione Operativa – Farmacie Medigas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f2f4f7; margin: 0; padding: 0; }
+    header { background: #1e4e79; color: white; padding: 24px; text-align: center; font-size: 24px; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
+    .container { max-width: 900px; margin: 30px auto; padding: 0 20px; }
+    .section { background: white; padding: 22px; border-radius: 14px; margin-bottom: 25px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); }
+    .section h2 { margin-top: 0; color: #1e4e79; font-size: 20px; font-weight: 600; border-left: 6px solid #1e4e79; padding-left: 10px; }
+    label { font-weight: 600; display: block; margin-top: 14px; font-size: 15px; }
+    select, input { width: 100%; padding: 12px; margin-top: 6px; border-radius: 8px; border: 1px solid #b3b3b3; background: #fafafa; font-size: 15px; }
+    button { width: 100%; padding: 15px; margin-top: 25px; background: #1e4e79; color: white; border: none; font-size: 18px; border-radius: 10px; cursor: pointer; font-weight: 600; box-shadow: 0 3px 6px rgba(0,0,0,0.2); }
+    button:hover { background: #163d61; }
+    .output { background: #ffffff; padding: 25px; margin-top: 15px; border-left: 6px solid #1e4e79; border-radius: 12px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); font-size: 16px; line-height: 1.6; }
+
+    /* Colonne per Resto d’Italia */
+    .col-container { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 10px; }
+    .col { flex: 1; min-width: 320px; background: #ffffff; padding: 18px; border-radius: 12px;
+           border-left: 5px solid #1e4e79; box-shadow: 0 3px 8px rgba(0,0,0,0.10); }
+    .col h3 { margin: 0 0 10px 0; font-size: 18px; color: #1e4e79; }
+</style>
+</head>
+
+<body>
+
+<header>Decisione Operativa – Farmacie Medigas</header>
+
+<div class="container">
+
+    <div class="section">
+        <h2>Input</h2>
+
+        <label>Area farmacia</label>
+        <select id="area" onchange="gestisciSezione(); popolaSottozone();">
+            <option value="">— Seleziona —</option>
+            <option value="brescia">Brescia e provincia</option>
+            <option value="torino">Comuni Torino</option>
+            <option value="emilia">Emilia Romagna</option>
+            <option value="sardegna">Sud Sardegna</option>
+            <option value="resto">Resto d'Italia</option>
+        </select>
+
+        <div id="container-inputs">
+
+            <label>Sottozona</label>
+            <select id="zona">
+                <option value="">— Seleziona l'area prima —</option>
+            </select>
+
+            <label>Giorno richiesto dalla farmacia</label>
+            <input type="date" id="giornoRichiesto">
+
+            <label>Data e ora inserimento su Portale / Infomed</label>
+            <input type="datetime-local" id="inserimento">
+
+            <button onclick="calcola()">Genera Decisione Operativa</button>
+
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Risultato</h2>
+        <div id="result" class="output">Compila i campi per generare la decisione operativa.</div>
+    </div>
+
+</div>
+
 <script>
 /* ==========================================================
-   DINAMICA MOSTRA/NASCONDI INPUT PER RESTO D’ITALIA
+   MOSTRA/NASCONDI INPUT PER RESTO D’ITALIA
 ========================================================== */
 function gestisciSezione() {
     const area = document.getElementById("area").value;
@@ -8,16 +79,16 @@ function gestisciSezione() {
     const out = document.getElementById("result");
 
     if (area === "resto") {
-        inputs.style.display = "none";  // nasconde i campi
-        mostraProceduraResto();         // mostra subito procedura
+        inputs.style.display = "none";
+        mostraProceduraResto();
     } else {
-        inputs.style.display = "block"; // mostra i campi
+        inputs.style.display = "block";
         out.innerHTML = "Compila i campi per generare la decisione operativa.";
     }
 }
 
 /* ==========================================================
-   PROCEDURA COMPLETA RESTO D’ITALIA (MOSTRATA SUBITO)
+   PROCEDURA COMPLETA RESTO D’ITALIA
 ========================================================== */
 function mostraProceduraResto() {
     document.getElementById("result").innerHTML = `
@@ -183,20 +254,15 @@ function isInPiano(area,zona,day){
 
 /* ==========================================================
    NUOVO CALCOLO GIORNO GARANTITO
-   (Tiene conto di cut-off + giorno richiesto)
 ========================================================== */
 function computeGuaranteedDate(area, zona, dtIns, reqDate){
     const giorni=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
 
-    // Giorno di inserimento (solo parte data)
     let base = new Date(dtIns.getFullYear(), dtIns.getMonth(), dtIns.getDate());
     const weekday = base.getDay();
 
     let offset;
-
-    // Gestione weekend + cut-off
     if (weekday === 6 || weekday === 0) {
-        // Sabato o domenica → si parte dal lunedì successivo
         base = (weekday === 6) ? addDays(base, 2) : addDays(base, 1);
         offset = 1;
     } else {
@@ -205,13 +271,11 @@ function computeGuaranteedDate(area, zona, dtIns, reqDate){
         offset = entroCutOff ? 1 : 2;
     }
 
-    // Primo giorno utile teorico (da cut-off)
     const primoDaCutoff = addWorkingDays(base, offset);
 
     // Non possiamo garantire prima del giorno richiesto
     let d = new Date(Math.max(primoDaCutoff.getTime(), reqDate.getTime()));
 
-    // Cerchiamo il primo giorno in piano >= max(cutoff, richiesto)
     while (true) {
         if (isWorkingDay(d) && isInPiano(area, zona, giorni[d.getDay()])) break;
         d = addWorkingDays(d, 1);
@@ -221,11 +285,11 @@ function computeGuaranteedDate(area, zona, dtIns, reqDate){
 }
 
 /* ==========================================================
-   FUNZIONE PRINCIPALE (AREE CON CALCOLO)
+   CALCOLO PRINCIPALE
 ========================================================== */
 function calcola(){
     const area=document.getElementById("area").value;
-    if(area==="resto") return; // già gestito da mostraProceduraResto
+    if(area==="resto") return; // già gestito
 
     const zona=document.getElementById("zona").value;
     const dRich=document.getElementById("giornoRichiesto").value;
@@ -247,7 +311,6 @@ function calcola(){
 
     const inPianoRichiesto = isInPiano(area,zonaEff,giornoRich);
 
-    // Nuovo calcolo: giorno garantito tenendo conto anche del giorno richiesto
     const dtGarantito = computeGuaranteedDate(area, zonaEff, dtI, reqDate);
     const giornoGarantito = giorni[dtGarantito.getDay()];
     const garDate = new Date(dtGarantito.getFullYear(), dtGarantito.getMonth(), dtGarantito.getDate());
@@ -264,7 +327,7 @@ function calcola(){
         }
     }
 
-    out.innerHTML=`
+    document.getElementById("result").innerHTML=`
 <b>Area:</b> ${area.toUpperCase()}<br>
 <b>Zona:</b> ${zonaEff}<br><br>
 
@@ -277,3 +340,6 @@ function calcola(){
 `;
 }
 </script>
+
+</body>
+</html>
